# wgpu-n-body

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  color_shader.wgsl  comp_shader.wgsl  lib.rs  main.rs  rend_shader.wgsl  renderer.rs  sim.rs
