[package]
name = "wgpu-n-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.1"
env_logger = "0.11.1"
tokio = { version = "1.36.0", features = ["full"] }
bytemuck = {version = "1.14.1", features = ["derive"]}
cgmath = "0.18.0"
futures-intrusive = "0.5.0"
image = "0.24.8"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
tokio-util = "0.7.10"
